reset-pass-api/k8s/reset-api-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: reset
    namespace: reset
    labels:
        app: reset
        tier: frontend
spec:
    type: NodePort
    ports:
        - port: 8000
    selector:
        app: reset
        tier: frontend
