reset-pass-api/k8s/reset-api-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: reset-ssl-ingress
    namespace: reset
    annotations:
        kubernetes.io/ingress.global-static-ip-name: reset-ssl-ingress-ip
        networking.gke.io/managed-certificates: reset-ssl-certificate
        nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
        kubernetes.io/ingress.allow-http: "false"
        nginx.ingress.kubernetes.io/proxy-connect-timeout: "6000"
        nginx.ingress.kubernetes.io/proxy-send-timeout: "6000"
        nginx.ingress.kubernetes.io/proxy-read-timeout: "6000"
        ingress.kubernetes.io/proxy-connect-timeout: "6000"
        ingress.kubernetes.io/proxy-send-timeout: "6000"
        ingress.kubernetes.io/proxy-read-timeout: "6000"
spec:
    rules:
        - host: resetapi.alfreddelivery.com
          http:
              paths:
                  - backend:
                        serviceName: reset
                        servicePort: 8000
